# imagedata_transport_s3

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  techstack.md  techstack.yml  tox.ini
.github/workflows/: ci.yml  release.yml
biffdata/: _version.py
data/biff/time/: time00.biff  time01.biff  time02.biff
src/imagedata-format-biff/: biffplugin.py
src/imagedata_format_biff/: __init__.py  biffplugin.py
src/imagedata_transport_s3/: __init__.py  s3transport.py
tests/: test_formats_biff.py  test_formats_biff_template.py  test_transport_s3.py
